# statute-version-tracker

./: .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  pyproject.toml
docs/_report/: research_report.md
results/: diff__2022-01-01__to__2023-01-01.jsonl  diff__2023-01-01__to__2024-01-01.jsonl  summary.json
results/_style/: repo.mplstyle
src/statute_tracker/: runner.py  types.py
src/statute_tracker/classify/: kind.py
src/statute_tracker/cli/: main.py
src/statute_tracker/diff/: lexical.py  semantic.py
src/statute_tracker/snapshots/: synthetic.py
src/statute_tracker/viz/: charts.py
tests/: test_classify.py  test_lexical.py  test_snapshots.py
